6.kubernetes/k8s-basic/ingress-lesson/nginx-dpl/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc 
spec:
  selector:
    app: nginx-app 
  ports:
  - port:  80
    targetPort: 80
