6.kubernetes/k8s-basic/ingress-lesson/nginx-dpl/nginx-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   # label: 
#     # app.kubernetes.io/name: nginx-ingress
#   # annotations: 
#   #   cert-manager.io/cluster-issuer: "letsencrypt-staging"
#   #   #cert-manager.io/cluster-issuer: "letsencrypt-prod"
#   #   kubernetes.io/ingressClassName: "nginx"
# spec:
#   ingressClassName: nginx
#   # tls: 
#   #   - hosts: 
#   #     - k8s-nginx-demo.tochratana.com
#   #    - reactjs-k8s.anajak-khmer.site
#   #     secretName: nginx-k8s-tls 
#   rules:
#   - host:
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend: # This point is refer to service thta run use this ingress, and all service is cache from name
#           service:
#             name: nginx-svc
#             port: 
#               number: 80



# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     # cert-manager.io/cluster-issuer: "letsencrypt-staging"
#     cert-manager.io/cluster-issuer: "letsencrypt-prod"
#     kubernetes.io/ingressClassName: "nginx"
#     kubernetes.io/tls-acme: "true"
# spec:
#   ingressClassName: "nginx"
#   tls: 
#     - hosts: 
#       - k8s-nginx-demo.tochratana.com
#      # - reactjs-k8s.anajak-khmer.site
#       secretName: nginx-k8s-tls
#   rules:
#   - host: k8s-nginx-demo.tochratana.com
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: nginx-svc
#             port: 
#               number: 80



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s-nginx-demo-prod.tochratana.com
      secretName: nginx-k8s-tls
  rules:
    - host: k8s-nginx-demo-prod.tochratana.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
